--- a/style.css
+++ b/style.css
@@ -1,15 +1,122 @@
-body {
+* {
+    box-sizing: border-box;
+    font-size: 16px;
+    font-family: Piedra,sans-serif;
+    margin: 0;
+    padding: 0;
+}
+body{
     display: flex;
-    height: 100vh;
+    height:100vh;
+    align-items: center;
+    justify-content: center;
+}
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.top{
+    display: flex;
+    width:  90rem;
+    height: 20rem;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+h1 {
+    position: absolute;
+    top:1rem;
+    font-size: 5rem;
+    word-spacing: 8rem;
+    margin-bottom: 2rem;
+    letter-spacing: .7rem;
+    margin-top: 0;
+}
+#answerText,
+.gameRound {
+    margin-bottom: 2rem;
+    font-size: 1.5rem;
+    letter-spacing: .2rem;
+    font-family: 'Space Mono';
+    white-space: pre-line;
+    color: rgb(100, 85, 85);
+    
+}
+#answerText{
+    margin-top: 5rem;
+}
+.playerCon,
+.score,
+.computerCon {
+    width: 29rem;
+    height: 20rem;
+    display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 30px;
-    color: Red;
-    font-family: Piedra,sans-serif;
-    word-spacing: 20px;
-    letter-spacing: 10px;
-    background: url(images/fog.jpeg);
-    background-repeat: no-repeat;
-    background-size: cover;
+}
+.score{
+    gap:3rem
+}
+.score p {
+    font-size: 10rem;
+}
+.gameImg{
+    width: 18rem;
+    height: 18rem;
+    border-radius: 50%;
+    padding:1rem
+    
+    
+}
+.bottom {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 2rem;
+    gap:5rem
+}
+.choose{
+    width:8rem;
+    height: 8rem;
+}
+.bottom button {
+    background-color: white;
+    border-radius: 50%;
+    overflow: hidden;
+    width: 10rem;
+    height:10rem;
+    border: 10px inset rgb(174, 14, 14);
+    box-shadow: 0px 0px 10px 5px grey;
+}
+.endCard{
+    position: absolute;
+    top: 25%;
+    left: 35%;
+    width: 750px;
+    height: 450px;
+    background: url(./images/endCard.jpeg);
+    border-radius: 2rem;
+    order: 2;
+    opacity: .4;
 
+}
+
+.reset{
+    position: relative;
+    top: 70%;
+    left: 37%;
+    font-size: 2rem;
+    border-radius:  1rem;
+    padding: 1rem;
+    width: 200px;
+    border: none;
+    order: 3;
+}
+.backGroundBlur{
+    display: none;
+    width: 100vw;
+    height: 100vh;
+    order:1;
+    background-color: white;
+    opacity: .8;
 }
