--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     height:100vh;
     align-items: center;
     justify-content: center;
+    background-color: floralwhite;
 }
 main{
     display: flex;
@@ -25,7 +26,7 @@ main{
     margin-bottom: 2rem;
 }
 h1 {
-    position: absolute;
+    display: block;
     top:1rem;
     font-size: 5rem;
     word-spacing: 8rem;
@@ -41,10 +42,12 @@ h1 {
     font-family: 'Space Mono';
     white-space: pre-line;
     color: rgb(100, 85, 85);
+    text-align: center;
+    line-height: 3rem;
     
 }
 #answerText{
-    margin-top: 5rem;
+    margin-top: 3rem;
 }
 .playerCon,
 .score,
@@ -56,7 +59,7 @@ h1 {
     align-items: center;
 }
 .score{
-    gap:3rem
+    gap:3rem;
 }
 .score p {
     font-size: 10rem;
@@ -65,20 +68,22 @@ h1 {
     width: 18rem;
     height: 18rem;
     border-radius: 50%;
-    padding:1rem
-    
-    
+    border: 10px inset rgb(174, 14, 14);
 }
 .bottom {
     display: flex;
     justify-content: space-evenly;
     padding: 2rem;
-    gap:5rem
+    gap:5rem;
+    width: 60%;
+    height: 13rem;
 }
 .choose{
-    width:8rem;
-    height: 8rem;
+    width:100%;
+    height: 100%;
+   
 }
+
 .bottom button {
     background-color: white;
     border-radius: 50%;
@@ -87,36 +92,53 @@ h1 {
     height:10rem;
     border: 10px inset rgb(174, 14, 14);
     box-shadow: 0px 0px 10px 5px grey;
+    transition: width 1s, height 1s;
+    padding: .5rem;
+}
+.bottom button:hover{
+    width: 12rem;
+    height: 12rem;
 }
 .endCard{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
     position: absolute;
-    top: 25%;
-    left: 35%;
-    width: 750px;
-    height: 450px;
-    background: url(./images/endCard.jpeg);
+    top: 28%;
+    width: 45vw;
+    height: 45vh;
+    background-color: aqua;
     border-radius: 2rem;
     order: 2;
-    opacity: .4;
+    box-shadow: 0px 0px 23px 0px rgba(0,0,0,0.75);
+    background: rgb(2,0,36);
+    padding:2rem;
+    opacity: .9;
 
 }
 
 .reset{
-    position: relative;
-    top: 70%;
-    left: 37%;
     font-size: 2rem;
     border-radius:  1rem;
     padding: 1rem;
     width: 200px;
     border: none;
     order: 3;
+    background-color: rgb(88, 65, 54);
+    margin-bottom: 2rem;
+    color:white
 }
-.backGroundBlur{
-    display: none;
-    width: 100vw;
-    height: 100vh;
-    order:1;
-    background-color: white;
-    opacity: .8;
+.reset:hover{
+    background-color: rgb(41, 171, 69);
+    color: black;
 }
+#endText {
+    margin-bottom:10rem;
+    font-size: 2rem;
+    letter-spacing: .1rem;
+    color: rgb(41, 171, 69);
+    text-align: center;
+    line-height: 3rem;
+}
+
