--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-family: Piedra,sans-serif;
     margin: 0;
     padding: 0;
-    color: floralwhite;
+    /* color: floralwhite; */
 }
 body{
     display: flex;
@@ -12,6 +12,7 @@ body{
     align-items: center;
     justify-content: center;
     background-color: floralwhite;
+    
 }
 main{
     display: flex;
@@ -34,6 +35,7 @@ h1 {
     margin-bottom: 2rem;
     letter-spacing: .7rem;
     margin-top: 0;
+    color: cadetblue;
 }
 #answerText,
 .gameRound {
@@ -64,6 +66,7 @@ h1 {
 }
 .score p {
     font-size: 10rem;
+    color:cadetblue;
 }
 .gameImg{
     width: 18rem;
