--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     font-family: Piedra,sans-serif;
     margin: 0;
     padding: 0;
-    /* color: floralwhite; */
+    color: floralwhite;
 }
 body{
     display: flex;
