--- a/style.css
+++ b/style.css
@@ -6,23 +6,27 @@
     padding: 0;
     color: floralwhite;
 }
+
+
 body{
     display: flex;
-    height:100vh;
     align-items: center;
     justify-content: center;
     background-color: floralwhite;
+    height: 100vh;
+    
     
 }
 main{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 auto;
 }
 .top{
     display: flex;
-    width:  90rem;
-    height: 20rem;
+    max-width:  89rem;
+    max-height: 20rem;
     justify-content: space-around;
     align-items: center;
     margin-bottom: 2rem;
@@ -33,7 +37,7 @@ h1 {
     font-size: 5rem;
     word-spacing: 8rem;
     margin-bottom: 2rem;
-    letter-spacing: .7rem;
+    letter-spacing: .9rem;
     margin-top: 0;
     color: cadetblue;
 }
@@ -47,6 +51,7 @@ h1 {
     color: rgb(100, 85, 85);
     text-align: center;
     line-height: 3rem;
+    max-width: 86%;
     
 }
 #answerText{
@@ -55,7 +60,7 @@ h1 {
 .playerCon,
 .score,
 .computerCon {
-    width: 29rem;
+    min-width: 29rem;
     height: 20rem;
     display: flex;
     justify-content: center;
@@ -72,7 +77,7 @@ h1 {
     width: 18rem;
     height: 18rem;
     border-radius: 50%;
-    border: 10px inset rgb(174, 14, 14);
+    border: 10px inset cadetblue
 }
 .bottom {
     display: flex;
@@ -94,7 +99,7 @@ h1 {
     overflow: hidden;
     width: 10rem;
     height:10rem;
-    border: 10px inset rgb(174, 14, 14);
+    border: 10px inset cadetblue;
     box-shadow: 0px 0px 10px 5px grey;
     transition: width 1s, height 1s;
     padding: .5rem;
