--- a/style.css
+++ b/style.css
@@ -122,7 +122,6 @@ h1 {
     background: url(./images/endCard.jpeg);
     background-position: 20% 18%;
     padding:2rem;
-    opacity: .9;
 
 }
 #endText {
@@ -134,6 +133,8 @@ h1 {
     line-height: 3rem;
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: black;
+    animation: reset 4s linear  1  ;
+    text-shadow: 0px 0px 30px black;
 }
 .endScore{
     display: flex;
@@ -146,9 +147,24 @@ h1 {
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: black;
 }
+.endScorePlayer{
+    position: relative;
+    left: -1000%;
+    animation: scorePlayer 1s linear 1s 1 forwards;
+    animation: name duration timing-function delay iteration-count direction fill-mode;
+
+}
+.endScoreComputer{
+    position: relative;
+    right:  -1000%;
+    animation: scoreComputer 1s linear 2s 1 forwards;
+}
 .divider{
     width: 4rem;
     height: 8rem;
+    position: relative;
+    top:-1000%;
+    animation: bolt 1s linear  3s 1 forwards ;
 }
 .reset{
     font-size: 2rem;
@@ -160,9 +176,35 @@ h1 {
     order: 3;
     background-color: goldenrod;
     color:white;
+    animation: reset 4s linear  1  ;
 }   
 .reset:hover{
     background-color: cadetblue;
     color: black;
 }
+@keyframes reset{
+    0% {opacity: 0;}
+    25% {opacity: 0.25;}
+    50% {opacity: 0.50;}
+    75% {opacity: 0.75;}
+    100% {opacity: 1;}
+}
+@keyframes bolt{
+    0% {top:-1000%}
+    100% {top:0%};
+}
+@keyframes scorePlayer {
+    0% {left: -1000%};
+    50%{left: -500%}
+    100%{left: 0%}
+}
+@keyframes scoreComputer {
+    0% {right: -1000%};
+    50% {right: -500%};
+    75% {right: -250%}
+    100%{right: 0%};
+}
+    
+
+
 
