--- a/style.css
+++ b/style.css
@@ -7,16 +7,13 @@
     color: floralwhite;
 }
 
-
 body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: floralwhite;
-  
-    
-    
+    background-color: bisque
 }
+
 main{
     display: flex;
     flex-direction: column;
@@ -26,17 +23,14 @@ main{
 }
 .top{
     display: flex;
-    max-width:  89rem;
     max-height: 18rem;
-    justify-content: space-around;
-    align-items: center;
     margin-bottom: 2rem;
 }
 h1 {
     display: block;
     top:1rem;
     font-size: 5rem;
-    word-spacing: 8rem;
+    word-spacing: 5rem;
     margin-bottom: 2rem;
     letter-spacing: .9rem;
     margin-top: 0;
@@ -61,14 +55,14 @@ h1 {
 .playerCon,
 .score,
 .computerCon {
-    min-width: 29rem;
-    height: 18rem;
+    min-width: 20rem;
+    height: 15rem;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .score{
-    gap:3rem;
+    gap:2rem;
 }
 .score p {
     font-size: 10rem;
@@ -78,7 +72,8 @@ h1 {
     width: 15rem;
     height: 15rem;
     border-radius: 50%;
-    border: 10px inset cadetblue
+    border: 10px inset cadetblue;
+    mix-blend-mode: ;
 }
 .bottom {
     display: flex;
@@ -86,6 +81,7 @@ h1 {
     gap:5rem;
     width: 60%;
     height: 10rem;
+    flex: 0;
 }
 .choose{
     width:100%;
@@ -104,8 +100,8 @@ h1 {
     padding: .5rem;
 }
 .bottom button:hover{
-    width: 12rem;
-    height: 12rem;
+    width: 10rem;
+    height: 10rem;
 }
 .endCard{
     display: flex;
